--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ function autolog2(){
 	var a = getCookieUser();
 	var b = getCookiePass();
 	if(a.length > 1 && b.length > 1){
-		window.open("student.html", "_self");
+		window.open("displayGrades.php", "_self");
 	} else{
 		document.getElementById('id01').style.display='block';
 	}
