--- a/student.html
+++ b/student.html
@@ -39,11 +39,11 @@
     <br/>
     <img id="github" src="github.png">
     <div id="login1">
-    <a href="ceva" style="text-decoration: none;">Login github</a>
-    <button id="github-activity">10</button>
+    <a href="login.php" style="text-decoration: none;">Login github</a>
+    <button id="github-activity"></button>
     </div>
     <h2 id="situatie">Situatie scolara</h2>
-
+    <!-- <form action="displayGrades.php"> -->
     <table id="tabelas">
         <tr>
             <th> </th>
@@ -53,69 +53,100 @@
             <th>Teste</th>
         </tr>
         <tr>
-            <th>Saptamana 1</th>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <th id="s1">Saptamana 1</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
         </tr>
         <tr>
-            <th>Saptamana 2</th>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <th id="s2">Saptamana 2</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
         </tr>
         <tr>
-            <th>Saptamana 3</th>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <th id="s3">Saptamana 3</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
         </tr>
         <tr>
-            <th>Saptamana 4</th>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <th id="s4">Saptamana 4</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
         </tr>
         <tr>
-            <th>Saptamana 5</th>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <th id="s5">Saptamana 5</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
         </tr>
         <tr>
-            <th>Saptamana 6</th>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <th id="s6">Saptamana 6</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
         </tr>
         <tr>
-            <th>Saptamana 7</th>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <th id="s7">Saptamana 7</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
         </tr>
         <tr>
-            <th>Saptamana 8</th>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <th id="s8">Saptamana 8</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
         </tr>
         <tr>
-            <th>Saptamana 9</th>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <th id="s9">Saptamana 9</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
+        </tr>
+        <tr>
+            <th id="s10">Saptamana 10</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
+        </tr>
+        <tr>
+            <th id="s11">Saptamana 11</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
+        </tr>
+        <tr>
+            <th id="s12">Saptamana 12</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
+        </tr>
+        <tr>
+            <th id="s13">Saptamana 13</th>
+            <td class="activitate">-</td>
+            <td class="prezenta">-</td>
+            <td class="proiect">-</td>
+            <td class="test">-</td>
         </tr>
     </table>
+    <!-- <button type="submit" style="position: relative;">Form</button>
+  </form> -->
+
 
     <p id="total">Total:</p>
 <div id="prom">
@@ -162,5 +193,6 @@ function logout(){
   window.open("index.html","_self");
 }
 </script>
+
 </body>
 </html>
